added video split banner

--- a/cloudcannon.config.yml
+++ b/cloudcannon.config.yml
@@ -297,7 +297,40 @@ _structures:
           overlay-opacity: 0.5op
           min-height: 80vh
           color-scheme: leaf-100
-      - label: Text & image grid
+      - label: Text & video grid
+        picker_preview:
+          text: Text and grid
+          subtext:
+          icon:
+          icon_color:
+          image:
+          metadata:
+          gallery:
+            image: /uploads/split-grid-preview.png
+            icon:
+            icon_color:
+            fit:
+        tags:
+        value:
+          _id: banner-video-split
+          block-content-html:
+          background-desktop-image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
+          background-mobile-image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
+          videos:
+            - video_path: /uploads/WEBSITE-BANNER.mp4
+              video_type: mp4
+          background-alt: 
+          desktop-collapse-bg-padding: true
+          desktop-image-position: right
+          text-alignment: left
+          vert-alignment: bottom
+          mobile-image-position: bottom
+          mobile-collapse-bg-padding: false
+          img_aspect: Square
+          collapse-top-space: false
+          collapse-bottom-space: false
+          color-scheme: leaf-500
+                - label: Text & image grid
         picker_preview:
           text: Text and grid
           subtext:
@@ -314,8 +347,8 @@ _structures:
         value:
           _id: banner-split
           block-content-html:
-          background-desktop-image: /uploads/bp4a8582-hdr.jpg
-          background-mobile-image: /uploads/bp4a8582-hdr.jpg
+          background-desktop-image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
+          background-mobile-image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
           background-alt: 
           desktop-collapse-bg-padding: true
           desktop-image-position: right
@@ -346,7 +379,7 @@ _structures:
           block-content-html:
           content-max-width:
           videos:
-            - video_path: /uploads/sea-24216-360p.mp4
+            - video_path: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
               video_type: mp4
           placeholder_image: 
           controls: false
@@ -591,28 +624,28 @@ _structures:
           image-width: max(25%, 8rem)
           img_aspect: Square
           scroll-items:
-            - image: /uploads/bp4a8582-hdr.jpg
+            - image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
               block-content-html: >-
                 <h3>Lorem ipsum dolor</h3> <p> sit amet consectetur adipisicing elit. Ab
                 corporis obcaecati doloremque optio! Unde accusantium, esse
                 consectetur asperiores voluptates obcaecati nobis libero
                 necessitatibus vero labore quod eaque. Illum, tenetur alias!</p>
               link:
-            - image: /uploads/bp4a8582-hdr.jpg
+            - image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
               block-content-html: >-
                 <h3>Lorem ipsum dolor</h3> <p> sit amet consectetur adipisicing elit. Ab
                 corporis obcaecati doloremque optio! Unde accusantium, esse
                 consectetur asperiores voluptates obcaecati nobis libero
                 necessitatibus vero labore quod eaque. Illum, tenetur alias!</p>
               link:
-            - image: /uploads/bp4a8582-hdr.jpg
+            - image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
               block-content-html: >-
                 <h3>Lorem ipsum dolor</h3> <p> sit amet consectetur adipisicing elit. Ab
                 corporis obcaecati doloremque optio! Unde accusantium, esse
                 consectetur asperiores voluptates obcaecati nobis libero
                 necessitatibus vero labore quod eaque. Illum, tenetur alias!</p>
               link:
-            - image: /uploads/bp4a8582-hdr.jpg
+            - image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
               block-content-html: >-
                 <h3>Lorem ipsum dolor</h3> <p> sit amet consectetur adipisicing elit. Ab
                 corporis obcaecati doloremque optio! Unde accusantium, esse
@@ -661,28 +694,28 @@ _structures:
           image-width: max(25%, 8rem)
           img_aspect: Square
           scroll-items:
-            - image: /uploads/bp4a8582-hdr.jpg
+            - image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
               block-content-html: >-
                 <h3>Lorem ipsum dolor</h3> <p> sit amet consectetur adipisicing elit. Ab
                 corporis obcaecati doloremque optio! Unde accusantium, esse
                 consectetur asperiores voluptates obcaecati nobis libero
                 necessitatibus vero labore quod eaque. Illum, tenetur alias!</p>
               link:
-            - image: /uploads/bp4a8582-hdr.jpg
+            - image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
               block-content-html: >-
                 <h3>Lorem ipsum dolor</h3> <p> sit amet consectetur adipisicing elit. Ab
                 corporis obcaecati doloremque optio! Unde accusantium, esse
                 consectetur asperiores voluptates obcaecati nobis libero
                 necessitatibus vero labore quod eaque. Illum, tenetur alias!</p>
               link:
-            - image: /uploads/bp4a8582-hdr.jpg
+            - image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
               block-content-html: >-
                 <h3>Lorem ipsum dolor</h3> <p> sit amet consectetur adipisicing elit. Ab
                 corporis obcaecati doloremque optio! Unde accusantium, esse
                 consectetur asperiores voluptates obcaecati nobis libero
                 necessitatibus vero labore quod eaque. Illum, tenetur alias!</p>
               link:
-            - image: /uploads/bp4a8582-hdr.jpg
+            - image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
               block-content-html: >-
                 <h3>Lorem ipsum dolor</h3> <p> sit amet consectetur adipisicing elit. Ab
                 corporis obcaecati doloremque optio! Unde accusantium, esse
@@ -738,8 +771,8 @@ _structures:
           size: 40m2
           bed: KING
           type: Pool Suite
-          background-desktop-image: /uploads/bp4a8582-hdr.jpg
-          background-mobile-image: /uploads/bp4a8582-hdr.jpg
+          background-desktop-image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
+          background-mobile-image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
           background-alt: 
           desktop-collapse-bg-padding: true
           desktop-image-position: right
@@ -779,7 +812,7 @@ _structures:
       - label: Image
         value:
           col-type: img
-          image: /uploads/bp4a8582-hdr.jpg
+          image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
           image_alt:
           img_aspect: Square
           col-width: 2
@@ -806,7 +839,7 @@ _structures:
         value:
           col-type: video
           videos:
-            - video_path: /uploads/sea-24216-360p.mp4
+            - video_path: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
               video_type: mp4
           video_controls: false
           video_autoplay: false
