top overlay section

--- a/_data/style.yml
+++ b/_data/style.yml
@@ -1,43 +1,13 @@
 schemes:
-  - scheme_name: leaf-100
+  - scheme_name: base
+    bg-color: '#D5E3DD'
+    text-color: '#003B49'
+    colored-button-bg-color: '#003B49'
+    colored-button-text-color: '#ffffff'
+  - scheme_name: dark
     bg-color: '#f3f3f0'
     text-color: '#3e3e3e'
     colored-button-bg-color:
-    colored-button-text-color:
-  - scheme_name: leaf-200
-    bg-color: '#e6e7e1'
-    text-color: '#272724'
-    colored-button-bg-color: '#8B8D81'
-    colored-button-text-color: '#E6E7E1'
-  - scheme_name: leaf-300
-    bg-color: '#d4d6ca'
-    text-color: '#3e3e3e'
-    colored-button-bg-color:
-    colored-button-text-color:
-  - scheme_name: leaf-400
-    bg-color: '#c1c4b3'
-    text-color: '#3a3a3a'
-    colored-button-bg-color:
-    colored-button-text-color:
-  - scheme_name: leaf-500
-    bg-color: '#87897d'
-    text-color: '#f3f3f0'
-    colored-button-bg-color:
-    colored-button-text-color:
-  - scheme_name: leaf-600
-    bg-color: '#61625a'
-    text-color: '#f3f3f0'
-    colored-button-bg-color: '#ece5dd'
-    colored-button-text-color: '#3e3e3e'
-  - scheme_name: dark
-    bg-color: '#272724'
-    text-color: '#f3f3f0'
-    colored-button-bg-color: '#ece5dd'
-    colored-button-text-color: '#3e3e3e'
-  - scheme_name: white
-    bg-color: '#272724'
-    text-color: '#f5f0ea'
-    colored-button-bg-color: '#ffffff'
     colored-button-text-color:
   - scheme_name: header
     bg-color: '#f3f3f0'
