--- a/cloudcannon.config.yml
+++ b/cloudcannon.config.yml
@@ -806,6 +806,27 @@ _structures:
             color-scheme: leaf-100
             max-width: 660px
             form-max-width: 900px
+      - label: text block with top overlap
+        picker_preview:
+          text: text block
+          subtext:
+          icon:
+          icon_color:
+          image:
+          metadata:
+          gallery:
+            image: /uploads/text-preview.png
+            icon:
+            icon_color:
+            fit:
+        tags:
+        value:
+          _id: text-block-top-overlap
+          block-content-html:
+          content-max-width:
+          text-alignment: center
+          color-scheme: leaf-100
+          min-height: 50vh
   columns:
     style: modal
     values:
