--- a/_data/pop-up.yml
+++ b/_data/pop-up.yml
@@ -6,6 +6,6 @@ X-color: '#ffffff'
 pop-up-width: 750px
 hide-duration-in-days: 1
 popup-delay-in-seconds: 1
-pop-up.color-scheme: leaf-200
+pop-up.color-scheme: base
 testing-mode: false
 shown: false
