--- a/cloudcannon.config.yml
+++ b/cloudcannon.config.yml
@@ -80,28 +80,16 @@ _inputs:
     options:
       allow_empty: false
       values:
-        - leaf-100
-        - leaf-200
-        - leaf-300
-        - leaf-400
-        - leaf-500
-        - leaf-600
+        - base
         - dark
-        - white
     cascade: true
   slider_col_color_scheme:
     type: select
     options:
       allow_empty: false
       values:
-        - leaf-100
-        - leaf-200
-        - leaf-300
-        - leaf-400
-        - leaf-500
-        - leaf-600
+        - base
         - dark
-        - white
     cascade: true
   heading-style:
     type: select
@@ -296,7 +284,7 @@ _structures:
           
           overlay-opacity: 0.5op
           min-height: 80vh
-          color-scheme: leaf-100
+          color-scheme: base
       - label: Text & video grid
         picker_preview:
           text: Text and video grid
@@ -327,7 +315,7 @@ _structures:
           img_aspect: Square
           collapse-top-space: false
           collapse-bottom-space: false
-          color-scheme: leaf-500
+          color-scheme: dark
       - label: Text & image grid
         picker_preview:
           text: Text and image grid
@@ -357,7 +345,7 @@ _structures:
           img_aspect: Square
           collapse-top-space: false
           collapse-bottom-space: false
-          color-scheme: leaf-500
+          color-scheme: dark
       - label: Video banner
         picker_preview:
           text: Video banner
@@ -386,7 +374,7 @@ _structures:
           vert-alignment: middle
           overlay-opacity: 0.5op
           min-height: 80vh
-          color-scheme: leaf-500
+          color-scheme: dark
       - label: youtube banner
         picker_preview:
           text: youtube banner
@@ -406,7 +394,7 @@ _structures:
           block-content-html: <h2> Simple heading </h2>
           text-alignment: right
           embed_code: <iframe width="560" height="315" src="https://www.youtube.com/embed/74qoqck7JVw?si=Q8EtE8su1RUk--ts" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-          color-scheme: leaf-300
+          color-scheme: base
       - label: text block
         picker_preview:
           text: text block
@@ -426,7 +414,7 @@ _structures:
           block-content-html:
           content-max-width:
           text-alignment: center
-          color-scheme: leaf-100
+          color-scheme: base
           min-height: 50vh
       - label: pricing block
         picker_preview:
@@ -444,7 +432,7 @@ _structures:
         tags:
         value:
           _id: custom-program-block
-          color-scheme: leaf-200
+          color-scheme: base
           
       - label: Blog content block
         picker_preview:
@@ -463,7 +451,7 @@ _structures:
         value:
           _id: blog-content-block
           content-max-width: 640px
-          color-scheme: leaf-100
+          color-scheme: base
       - label: Contact form
         picker_preview:
           text: Contact form
@@ -482,7 +470,7 @@ _structures:
           _id: contact
           block-content-html:
           text-alignment: center
-          color-scheme: leaf-100
+          color-scheme: base
           max-width: 660px
           form-max-width: 900px
       - label: Clickable slider
@@ -502,14 +490,13 @@ _structures:
         value:
           _id: slider
           block-content-html: <h2> Slider heading </h2><h3>  with subheading  </h3>
-          slider_col_color_scheme: leaf-500
+          slider_col_color_scheme: dark
           slider:
             - image: 
               video_path: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
               video_type: mp4
               link:
-            
-          color-scheme: leaf-500
+          color-scheme: dark
       - label: Grid
         picker_preview:
           text: Grid
@@ -538,7 +525,7 @@ _structures:
           columns:
           collapse-top-space: false
           collapse-bottom-space: false
-          color-scheme: leaf-500
+          color-scheme: dark
       - label: Grid - blog loop
         picker_preview:
           text: Grid for the blog
@@ -558,7 +545,7 @@ _structures:
             <h3 class="sub-heading"> OUR HOLISTIC APPROACH </h3> <h2>A personalised wellness blog, tailored to you.</h2>
           text-alignment: center
           grid-gap: 1rem
-          color-scheme: leaf-500
+          color-scheme: dark
       - label: html block
         picker_preview:
           text: html block
@@ -581,7 +568,7 @@ _structures:
             loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           cape-width: true
           vertical-padding: true
-          color-scheme: leaf-300
+          color-scheme: base
       - label: Scrolling grid
         picker_preview:
           text: Scrolling grid
@@ -630,7 +617,7 @@ _structures:
                 consectetur asperiores voluptates obcaecati nobis libero
                 necessitatibus vero labore quod eaque. Illum, tenetur alias!</p>
               link:
-          color-scheme: leaf-100
+          color-scheme: base
       
       - label: Accordion
         value:
@@ -645,7 +632,7 @@ _structures:
         value:
           _id: timeline
           block-content-html:
-          color-scheme: leaf-100
+          color-scheme: base
           max-width-timeline:
           time-line-points:
             - heading:
@@ -659,7 +646,7 @@ _structures:
               url:
             - text: clickable message
               url: google.com
-          color-scheme: leaf-500
+          color-scheme: dark
       - label: Text & image grid with experience fields
         picker_preview:
           text: text and grid with experience fields
@@ -693,7 +680,7 @@ _structures:
           img_aspect: Square
           collapse-top-space: false
           collapse-bottom-space: false
-          color-scheme: leaf-500
+          color-scheme: dark
       - label: feedback form
         picker_preview:
           text: feedback form
@@ -712,7 +699,7 @@ _structures:
             _id: feedback-form
             block-content-html: <h2> We greatly value your feedback </h2><h3 class="sub-heading">thank you for staying at Sukhavati</h3><p>Out mission is to be the world's leading boutique spa, dedicated to promoting health, disease prevention, and optimal rejuvenation through the wisdom of Ayurveda. As one of our valued guests, your feedback greatly helps us continually enhance your experience and create a truly blissful and transformative retreat.</p><p>We would love to receive your thoughts on the questions below </p>
             text-alignment: center
-            color-scheme: leaf-100
+            color-scheme: base
             max-width: 660px
             form-max-width: 900px
       - label: text block with top overlap
@@ -734,7 +721,7 @@ _structures:
           block-content-html:
           content-max-width:
           text-alignment: center
-          color-scheme: leaf-100
+          color-scheme: base
           min-height: 50vh
   columns:
     style: modal
@@ -760,7 +747,7 @@ _structures:
           icon-path:
           icon-alt:
           img_aspect: Original
-          color-scheme: leaf-300
+          color-scheme: base
           col-width: 1
           col-height: 1
           hide-on-mobile: false
