--- a/_data/style.yml
+++ b/_data/style.yml
@@ -16,7 +16,7 @@ schemes:
     colored-button-text-color:
   - scheme_name: header
     bg-color: '#f3f3f0'
-    text-color: '#61625a'
+    text-color: '#fff'
     colored-button-bg-color: '#61625a'
     colored-button-text-color: '#f3f3f0'
   - scheme_name: footer
