--- a/_data/style.yml
+++ b/_data/style.yml
@@ -15,7 +15,7 @@ schemes:
     colored-button-bg-color: '#D5E3DD'
     colored-button-text-color: '#003B49'
   - scheme_name: header
-    bg-color: '#f3f3f0'
+    bg-color: '#000'
     text-color: '#fff'
     colored-button-bg-color: '#61625a'
     colored-button-text-color: '#f3f3f0'
