--- a/_data/style.yml
+++ b/_data/style.yml
@@ -17,8 +17,8 @@ schemes:
   - scheme_name: header
     bg-color: '#000'
     text-color: '#fff'
-    colored-button-bg-color: '#61625a'
-    colored-button-text-color: '#f3f3f0'
+    colored-button-bg-color: '#D5E3DD'
+    colored-button-text-color: '#212529'
   - scheme_name: footer
     bg-color: '#212529'
     text-color: '#F0F0F0'
