--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -88,21 +88,12 @@ footer_nav_bar:
       link: /explore-benefits 
     - text: About Ayurveda
       link: /about-ayurveda
-footer-location-html: >-
-  <p>Br Bebengan Tangeb Abianbase</p> <p>Mengwi Badung 80351</p>
-  <p>Bali,Indonesia</p>
-footer-contact-links:
-  phone-number-text: +62 361 900 6128
-  phone-number: 623619006128
-  whatsApp-text: +62 819-1622-1559
-  whatsApp-link-number: 6281916221559
-  whatsApp-link-initial-message: Hi, I would like more information about your retreat
-  email: rejuvenation@sukhavatibali.com
-footer_social_links:
-  - link: >-
-      https://www.tripadvisor.com.au/Hotel_Review-g1025508-d3247603-Reviews-Sukhavati_Ayurvedic_Retreat_And_Spa-Mengwi_Bali.html
-    text: trip advisor
-  - link: https://www.instagram.com/sukhavati_bali/
-    text: Instagram
-  - link: https://www.facebook.com/Sukhavatibali/
-    text: Facebook
+footer-sub-links:
+  - text: PRIVACY POLICY
+    url: #
+  - text: MAIN WEBSITE
+    url: #
+  - text: IHG REWARDS
+    url: #
+  - text: TERMS & CONDITIONS
+    url: #
